--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,36 @@
 <resources>
-    <string name="app_name">APP名字</string>
+    <string name="app_name">blacksouls</string>
     <string name="channel_id">通知ID</string>
-    <string name="notice_title">这是一个通知</string>
+    <string name="notice_title">我
+在哪
+爱丽丝
+是爱丽丝
+是爱丽丝啊
+是小爱丽丝啊
+是次女爱丽丝啊
+是爱丽丝·利德尔啊
+是她爱丽丝·利德尔啊
+是次女爱丽丝·利德尔啊
+是亲爱的爱丽丝·利德尔啊
+是最喜欢的爱丽丝·利德尔啊
+是那最可爱的爱丽丝·利德尔啊
+是最可爱的次女爱丽丝·利德尔啊
+是我最喜爱的少女爱丽丝·利德尔啊
+是最可爱的少女爱丽丝·利德尔啊
+是喜爱的少女爱丽丝·利德尔啊
+是那美丽的爱丽丝·利德尔啊
+是可爱的爱丽丝·利德尔啊
+是我的爱丽丝·利德尔啊
+是我喜欢的爱丽丝啊
+是可爱的爱丽丝啊
+是那个爱丽丝啊
+爱丽丝不够了
+爱丽丝在哪
+是爱丽丝
+爱丽丝
+不够
+了
+……
+爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝在哪？爱丽丝？
+爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽丝爱丽・ｿ關ｽ蜈･逋ｽ蜈皮噪豢樒ｩｴ荵倶ｸｭ~</string>
 </resources>
